--- a/estilo.css
+++ b/estilo.css
@@ -58,7 +58,7 @@ html{
 /* SECCION I N I C I O */
 .inicio{
     background: linear-gradient(to top, rgba(30,35,38,.8), rgba(30,35,38,1)),
-    url(img/fondo.jpg);
+    url(img/fondo1.jpg);
     background-size: cover;
     height: 100vh;
     color: #fff;
@@ -284,34 +284,34 @@ html{
 }
 @keyframes htmlcss {
     0%{width: 0%;}
-    100%{width: 89%;}
+    100%{width: 80%;}
 }
 
-.skills .skill .photoshop{
+.skills .skill .react{
     width: 0%;
-    animation: 2s photoshop forwards;
+    animation: 2s react forwards;
 }
-@keyframes photoshop {
+@keyframes react {
     0%{width: 0%;}
-    100%{width: 95%;}
+    100%{width: 80%;}
 }
 
-.skills .skill .wordpress{
+.skills .skill .angular{
     width: 0%;
-    animation: 2s wordpress forwards;
+    animation: 2s angular forwards;
 }
-@keyframes wordpress {
+@keyframes angular {
     0%{width: 0%;}
-    100%{width: 81%;}
+    100%{width: 70%;}
 }
 
-.skills .skill .drupal{
+.skills .skill .asp{
     width: 0%;
-    animation: 2s drupal forwards;
+    animation: 2s asp forwards;
 }
-@keyframes drupal {
+@keyframes asp {
     0%{width: 0%;}
-    100%{width: 55%;}
+    100%{width: 70%;}
 }
 
 .skills .skill .comunicacion{
@@ -329,7 +329,7 @@ html{
 }
 @keyframes trabajo {
     0%{width: 0%;}
-    100%{width: 70%;}
+    100%{width: 75%;}
 }
 
 .skills .skill .creatividad{
@@ -347,7 +347,7 @@ html{
 }
 @keyframes dedicacion {
     0%{width: 0%;}
-    100%{width: 65%;}
+    100%{width: 80%;}
 }
 
 .skills .skill .proyect{
