--- a/estilo.css
+++ b/estilo.css
@@ -268,6 +268,12 @@ html{
     right: -15px;
     font-size: 14px;
 }
+.skills .skill .barra-skill span img {
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
+    overflow: hidden;
+}
 /* Estas clases se agregaran dinamicamente mediante javascript */
 .skills .skill .javascript{
     width: 0%;
@@ -275,7 +281,7 @@ html{
 }
 @keyframes javascript {
     0%{width: 0%;}
-    100%{width: 75%;}
+    100%{width: 100%;}
 }
 
 .skills .skill .htmlcss{
@@ -283,8 +289,8 @@ html{
     animation: 2s htmlcss forwards;
 }
 @keyframes htmlcss {
-    0%{width: 0%;}
-    100%{width: 80%;}
+    0%{width: 0%;} 
+    100%{width: 100%;}
 }
 
 .skills .skill .react{
@@ -293,7 +299,7 @@ html{
 }
 @keyframes react {
     0%{width: 0%;}
-    100%{width: 80%;}
+    100%{width: 100%;}
 }
 
 .skills .skill .angular{
@@ -302,7 +308,7 @@ html{
 }
 @keyframes angular {
     0%{width: 0%;}
-    100%{width: 70%;}
+    100%{width: 100%;}
 }
 
 .skills .skill .asp{
@@ -311,7 +317,7 @@ html{
 }
 @keyframes asp {
     0%{width: 0%;}
-    100%{width: 70%;}
+    100%{width: 100%;}
 }
 
 .skills .skill .comunicacion{
@@ -320,7 +326,7 @@ html{
 }
 @keyframes comunicacion {
     0%{width: 0%;}
-    100%{width: 80%;}
+    100%{width: 100%;}
 }
 
 .skills .skill .trabajo{
@@ -329,7 +335,7 @@ html{
 }
 @keyframes trabajo {
     0%{width: 0%;}
-    100%{width: 75%;}
+    100%{width: 100%;}
 }
 
 .skills .skill .creatividad{
@@ -338,7 +344,7 @@ html{
 }
 @keyframes creatividad {
     0%{width: 0%;}
-    100%{width: 99%;}
+    100%{width: 100%;}
 }
 
 .skills .skill .dedicacion{
@@ -347,7 +353,7 @@ html{
 }
 @keyframes dedicacion {
     0%{width: 0%;}
-    100%{width: 80%;}
+    100%{width: 100%;}
 }
 
 .skills .skill .proyect{
@@ -356,7 +362,7 @@ html{
 }
 @keyframes proyect {
     0%{width: 0%;}
-    100%{width: 94%;}
+    100%{width: 100%;}
 }
 /* SECCION CURRICULUM */
 .curriculum{
